resources/testcases_static_checks/tests/positive/isFrontierGuarded/void-null-join.rls
../../../tests_common_data/rule-classification-examples/void-null-join.rls