resources/testcases_static_checks/tests/negative/isDrpc/r07.rls
../../../tests_common_data/from-evaluation-section/r07.rls